// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.simpapp";
option java_outer_classname = "SimpappProto";

package simpapp;

// The simpapp service definition.
service simpapp {
  // Sends a greeting
  rpc SendClientStartRequest (ClientStartRequest) returns (ServerStartResponse) {}
  rpc SendClientListRequest (ClientListRequest) returns (ServerListResponse) {}
}

// The dccn client request message containing the user's token
message ClientStartRequest {
  string name = 1; // name of the task/image to run
  string region = 2; // region e.g US
  string zone = 3; // zone EST, PST etc
  string usertoken = 4; //user account, alphanumeric chars, may not be used now for authentication
}

// The Ankr Hub response message containing the success or failure
message ServerStartResponse {
  string status = 1; // Success or Failure
  int64 taskid = 2; //  id of task if success, in case of failure return -1
}

// The Client List request message
message ClientListRequest {
  string usertoken = 1; // List task for the account
}

message ServerListResponse {
  string taskname = 1; // List task for the account
  uint32 uptime = 2; // uptime of the task
  uint64 creationdate = 3; //task creation date
  string status = 4; // Active or inactive, Right now all tasks active
}
